--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: telegram-bot-autoreply
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt
+    buildCommand: pip install .
     startCommand: python main.py
     environment:
       pythonVersion: 3.10.13
