Cambio a build system

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "python-telegram-bot==20.7"
 ]
+
+[build-system]
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
