--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,5 @@
 services:
   - type: web
     name: telegram-bot-autoreply
-    env: python
+    env: docker
     plan: free
-    buildCommand: pip install .
-    startCommand: python main.py
