--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,5 @@ services:
     name: telegram-bot-autoreply
     env: python
     plan: free
-    buildCommand: pip install .
+    buildCommand: pip install -r requirements.txt
     startCommand: python main.py
